examples/route-modules/route-modules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-modules
  annotations:
    k8s.ngrok.com/https-compression: true
    k8s.ngrok.com/https-oauth.secret-name: ngrok-corp-ingress-oauth-credentials
    k8s.ngrok.com/https-oauth.provider: google
    k8s.ngrok.com/https-oauth.scopes: https://www.googleapis.com/auth/userinfo.email,https://www.googleapis.com/auth/userinfo.profile
    k8s.ngrok.com/https-oauth.allow-domains: ngrok.com
spec:
  ingressClassName: ngrok
  rules:
  - host: SET-VIA-config.yaml
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: http-echo-svc
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-deploy
spec:
  selector:
    matchLabels:
      app: http-echo-app
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo-app
    spec:
      containers:
      - name: http-echo
        image: mendhak/http-https-echo:24
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo-svc
  labels:
    app: http-echo-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-echo-app
